wykladoweks/wykladowe/MyGrammerParser.py
# Generated from MyGrammer.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MyGrammerParser ( Parser ):

    grammarFileName = "MyGrammer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'write'", "'read'", "'=='", "'<>'", "'*'", 
                     "'/'", "'-'", "'+'", "'eq'", "'noteq'", "<INVALID>", 
                     "<INVALID>", "'='", "','", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'if'", "'loop'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "EQ", "NEQ", "HELLO", "BYE", "ASSIGN", 
                      "COMMA", "BO", "BC", "SBO", "SBC", "CBO", "CBC", "IF", 
                      "LOOP", "INT", "REAL", "STRING", "ID", "WS" ]

    RULE_commandx = 0
    RULE_commands = 1
    RULE_hello = 2
    RULE_bye = 3
    RULE_command = 4
    RULE_statement = 5
    RULE_ifbody = 6
    RULE_table = 7
    RULE_table_content = 8
    RULE_expr = 9
    RULE_funct_value = 10
    RULE_value = 11
    RULE_table_val = 12
    RULE_numbers = 13
    RULE_id_ = 14
    RULE_if_val = 15
    RULE_string = 16

    ruleNames =  [ "commandx", "commands", "hello", "bye", "command", "statement", 
                   "ifbody", "table", "table_content", "expr", "funct_value", 
                   "value", "table_val", "numbers", "id_", "if_val", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    EQ=9
    NEQ=10
    HELLO=11
    BYE=12
    ASSIGN=13
    COMMA=14
    BO=15
    BC=16
    SBO=17
    SBC=18
    CBO=19
    CBC=20
    IF=21
    LOOP=22
    INT=23
    REAL=24
    STRING=25
    ID=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CommandxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commands(self):
            return self.getTypedRuleContext(MyGrammerParser.CommandsContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_commandx

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommandx" ):
                listener.enterCommandx(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommandx" ):
                listener.exitCommandx(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommandx" ):
                return visitor.visitCommandx(self)
            else:
                return visitor.visitChildren(self)




    def commandx(self):

        localctx = MyGrammerParser.CommandxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_commandx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.commands()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hello(self):
            return self.getTypedRuleContext(MyGrammerParser.HelloContext,0)


        def commands(self):
            return self.getTypedRuleContext(MyGrammerParser.CommandsContext,0)


        def command(self):
            return self.getTypedRuleContext(MyGrammerParser.CommandContext,0)


        def bye(self):
            return self.getTypedRuleContext(MyGrammerParser.ByeContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_commands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommands" ):
                listener.enterCommands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommands" ):
                listener.exitCommands(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommands" ):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = MyGrammerParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commands)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammerParser.HELLO]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.hello()
                self.state = 37
                self.commands()
                pass
            elif token in [MyGrammerParser.T__0, MyGrammerParser.T__1, MyGrammerParser.SBO, MyGrammerParser.IF, MyGrammerParser.LOOP, MyGrammerParser.INT, MyGrammerParser.REAL, MyGrammerParser.STRING, MyGrammerParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.command()
                self.state = 40
                self.commands()
                pass
            elif token in [MyGrammerParser.BYE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.bye()
                pass
            elif token in [MyGrammerParser.EOF]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HelloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_hello

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StartCommContext(HelloContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.HelloContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HELLO(self):
            return self.getToken(MyGrammerParser.HELLO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartComm" ):
                listener.enterStartComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartComm" ):
                listener.exitStartComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartComm" ):
                return visitor.visitStartComm(self)
            else:
                return visitor.visitChildren(self)



    def hello(self):

        localctx = MyGrammerParser.HelloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_hello)
        try:
            localctx = MyGrammerParser.StartCommContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(MyGrammerParser.HELLO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ByeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_bye

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EndCommContext(ByeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.ByeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BYE(self):
            return self.getToken(MyGrammerParser.BYE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndComm" ):
                listener.enterEndComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndComm" ):
                listener.exitEndComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndComm" ):
                return visitor.visitEndComm(self)
            else:
                return visitor.visitChildren(self)



    def bye(self):

        localctx = MyGrammerParser.ByeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bye)
        try:
            localctx = MyGrammerParser.EndCommContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(MyGrammerParser.BYE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LoopContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOOP(self):
            return self.getToken(MyGrammerParser.LOOP, 0)
        def numbers(self):
            return self.getTypedRuleContext(MyGrammerParser.NumbersContext,0)

        def CBO(self):
            return self.getToken(MyGrammerParser.CBO, 0)
        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)

        def CBC(self):
            return self.getToken(MyGrammerParser.CBC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)


    class AssignCommContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def ASSIGN(self):
            return self.getToken(MyGrammerParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignComm" ):
                listener.enterAssignComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignComm" ):
                listener.exitAssignComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignComm" ):
                return visitor.visitAssignComm(self)
            else:
                return visitor.visitChildren(self)


    class ExprCommContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprComm" ):
                listener.enterExprComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprComm" ):
                listener.exitExprComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprComm" ):
                return visitor.visitExprComm(self)
            else:
                return visitor.visitChildren(self)


    class FunctExprContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.function = None # Token
            self.arg = None # Funct_valueContext
            self.copyFrom(ctx)

        def BO(self):
            return self.getToken(MyGrammerParser.BO, 0)
        def BC(self):
            return self.getToken(MyGrammerParser.BC, 0)
        def funct_value(self):
            return self.getTypedRuleContext(MyGrammerParser.Funct_valueContext,0)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def ASSIGN(self):
            return self.getToken(MyGrammerParser.ASSIGN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctExpr" ):
                listener.enterFunctExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctExpr" ):
                listener.exitFunctExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctExpr" ):
                return visitor.visitFunctExpr(self)
            else:
                return visitor.visitChildren(self)


    class TableCommContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def table(self):
            return self.getTypedRuleContext(MyGrammerParser.TableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableComm" ):
                listener.enterTableComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableComm" ):
                listener.exitTableComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableComm" ):
                return visitor.visitTableComm(self)
            else:
                return visitor.visitChildren(self)


    class AssignTableCommContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def ASSIGN(self):
            return self.getToken(MyGrammerParser.ASSIGN, 0)
        def table(self):
            return self.getTypedRuleContext(MyGrammerParser.TableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignTableComm" ):
                listener.enterAssignTableComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignTableComm" ):
                listener.exitAssignTableComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignTableComm" ):
                return visitor.visitAssignTableComm(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MyGrammerParser.IF, 0)
        def statement(self):
            return self.getTypedRuleContext(MyGrammerParser.StatementContext,0)

        def CBO(self):
            return self.getToken(MyGrammerParser.CBO, 0)
        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)

        def CBC(self):
            return self.getToken(MyGrammerParser.CBC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class TableChangeCommContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.CommandContext
            super().__init__(parser)
            self.i = None # ValueContext
            self.val = None # ExprContext
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def SBO(self):
            return self.getToken(MyGrammerParser.SBO, 0)
        def SBC(self):
            return self.getToken(MyGrammerParser.SBC, 0)
        def ASSIGN(self):
            return self.getToken(MyGrammerParser.ASSIGN, 0)
        def value(self):
            return self.getTypedRuleContext(MyGrammerParser.ValueContext,0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableChangeComm" ):
                listener.enterTableChangeComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableChangeComm" ):
                listener.exitTableChangeComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableChangeComm" ):
                return visitor.visitTableChangeComm(self)
            else:
                return visitor.visitChildren(self)



    def command(self):

        localctx = MyGrammerParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MyGrammerParser.TableChangeCommContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.id_()
                self.state = 51
                self.match(MyGrammerParser.SBO)
                self.state = 52
                localctx.i = self.value()
                self.state = 53
                self.match(MyGrammerParser.SBC)
                self.state = 54
                self.match(MyGrammerParser.ASSIGN)
                self.state = 55
                localctx.val = self.expr(0)
                pass

            elif la_ == 2:
                localctx = MyGrammerParser.ExprCommContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.expr(0)
                pass

            elif la_ == 3:
                localctx = MyGrammerParser.FunctExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MyGrammerParser.ID:
                    self.state = 58
                    self.id_()
                    self.state = 59
                    self.match(MyGrammerParser.ASSIGN)


                self.state = 63
                localctx.function = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==MyGrammerParser.T__0 or _la==MyGrammerParser.T__1):
                    localctx.function = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 64
                self.match(MyGrammerParser.BO)
                self.state = 65
                localctx.arg = self.funct_value()
                self.state = 66
                self.match(MyGrammerParser.BC)
                pass

            elif la_ == 4:
                localctx = MyGrammerParser.AssignCommContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.id_()
                self.state = 69
                self.match(MyGrammerParser.ASSIGN)
                self.state = 70
                self.expr(0)
                pass

            elif la_ == 5:
                localctx = MyGrammerParser.AssignTableCommContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.id_()
                self.state = 73
                self.match(MyGrammerParser.ASSIGN)
                self.state = 74
                self.table()
                pass

            elif la_ == 6:
                localctx = MyGrammerParser.TableCommContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.table()
                pass

            elif la_ == 7:
                localctx = MyGrammerParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.match(MyGrammerParser.IF)
                self.state = 78
                self.statement()
                self.state = 79
                self.match(MyGrammerParser.CBO)
                self.state = 80
                self.expr(0)
                self.state = 81
                self.match(MyGrammerParser.CBC)
                pass

            elif la_ == 8:
                localctx = MyGrammerParser.LoopContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.match(MyGrammerParser.LOOP)
                self.state = 84
                self.numbers()
                self.state = 85
                self.match(MyGrammerParser.CBO)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(MyGrammerParser.CBC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NotEqualContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def if_val(self):
            return self.getTypedRuleContext(MyGrammerParser.If_valContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotEqual" ):
                listener.enterNotEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotEqual" ):
                listener.exitNotEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotEqual" ):
                return visitor.visitNotEqual(self)
            else:
                return visitor.visitChildren(self)


    class EqualContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(MyGrammerParser.Id_Context,0)

        def if_val(self):
            return self.getTypedRuleContext(MyGrammerParser.If_valContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = MyGrammerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = MyGrammerParser.EqualContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.id_()
                self.state = 92
                self.match(MyGrammerParser.T__2)
                self.state = 93
                self.if_val()
                pass

            elif la_ == 2:
                localctx = MyGrammerParser.NotEqualContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.id_()
                self.state = 96
                self.match(MyGrammerParser.T__3)
                self.state = 97
                self.if_val()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def command(self):
            return self.getTypedRuleContext(MyGrammerParser.CommandContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_ifbody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfbody" ):
                listener.enterIfbody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfbody" ):
                listener.exitIfbody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfbody" ):
                return visitor.visitIfbody(self)
            else:
                return visitor.visitChildren(self)




    def ifbody(self):

        localctx = MyGrammerParser.IfbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifbody)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_table

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TableBodyContext(TableContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.TableContext
            super().__init__(parser)
            self.val = None # ExprContext
            self.copyFrom(ctx)

        def SBO(self):
            return self.getToken(MyGrammerParser.SBO, 0)
        def table_content(self):
            return self.getTypedRuleContext(MyGrammerParser.Table_contentContext,0)

        def SBC(self):
            return self.getToken(MyGrammerParser.SBC, 0)
        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableBody" ):
                listener.enterTableBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableBody" ):
                listener.exitTableBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableBody" ):
                return visitor.visitTableBody(self)
            else:
                return visitor.visitChildren(self)



    def table(self):

        localctx = MyGrammerParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_table)
        try:
            localctx = MyGrammerParser.TableBodyContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MyGrammerParser.SBO)
            self.state = 106
            localctx.val = self.expr(0)
            self.state = 107
            self.table_content()
            self.state = 108
            self.match(MyGrammerParser.SBC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.val = None # ExprContext

        def COMMA(self):
            return self.getToken(MyGrammerParser.COMMA, 0)

        def table_content(self):
            return self.getTypedRuleContext(MyGrammerParser.Table_contentContext,0)


        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_table_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_content" ):
                listener.enterTable_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_content" ):
                listener.exitTable_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable_content" ):
                return visitor.visitTable_content(self)
            else:
                return visitor.visitChildren(self)




    def table_content(self):

        localctx = MyGrammerParser.Table_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_table_content)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammerParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(MyGrammerParser.COMMA)
                self.state = 111
                localctx.val = self.expr(0)
                self.state = 112
                self.table_content()
                pass
            elif token in [MyGrammerParser.SBC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ValExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(MyGrammerParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValExpr" ):
                listener.enterValExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValExpr" ):
                listener.exitValExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValExpr" ):
                return visitor.visitValExpr(self)
            else:
                return visitor.visitChildren(self)


    class StrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(MyGrammerParser.StringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrExpr" ):
                listener.enterStrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrExpr" ):
                listener.exitStrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrExpr" ):
                return visitor.visitStrExpr(self)
            else:
                return visitor.visitChildren(self)


    class InfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyGrammerParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyGrammerParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfixExpr" ):
                listener.enterInfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfixExpr" ):
                listener.exitInfixExpr(self)
